[package]
name = "dcmrig"
version = "0.1.0"
edition = "2021"
authors = ["Birendra Rokaha <birenrokaha1@gmail.com>"]
description = "DICOM corelab tools"
license = "MIT"
keywords = ["DICOM", "corelab", "Medical"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dcmrig_rs"
path = "src/lib.rs"

[[bin]]
name = "dcmrig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
dicom = "0.7.0"
home = "0.5.9"
indicatif = "0.17.8"
nanoid = "0.4.0"
rayon = "1.10.0"
regex = "1.10.2"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
